# personal-projects

./: README
based-coreutils/: README.md  copy.v  dog.v  locate.v  move.v  namehost.v  repeat.v
bbil/: .gitignore  LICENSE  README.md  main.bbil  v.mod
bbil/src/: main.v
cli-calendar/: LICENSE  README.md  clicalendar.v  clicalendar_daemon.v  v.mod
hlquotes-cli/: LICENSE  README.md  halflifequotes.v  v.mod
lazyfetch/: .gitignore  README.md  lazyfetch.v  v.mod
lazyfetch/assets/: example_config.toml  example_module.toml
lazyfetch/builtins/: builtins.v
pacv/: README.md
pacv/src/: main.v
power-mode/: README.md
power-mode/src/: powermode.v
power-mode/src/function/: function.v
sex-v/: README  sex-old.c  sex.v
torvalds-api/: README.md  pyproject.toml
torvalds-api/tests/: test_torvalds_api.py
torvalds-api/torvalds_api/: __init__.py  data.py  main.py
vaur/: .gitignore  README.md  v.mod  vaur.v
vaur/colorize/: colorize.v
vaur/functions/: checks.v  gendb.v  install.v  query.v  remove.v  update.v  update_db.v
vaur/git/: git.v
vaur/progressbar/: progressbar.v
vbps/: LICENSE  README.md  build.sh
vbps/src/vbps/: vbps.v
vbps/src/vbps-repos/: vbps-repos.v
vbps/src/vbps-repos/functions/: config.v  config_reader.v
vbps/src/vbps-runit/: vbps-runit.v
vbps/src/vbps-src/: vbps-src.v
vbps/src/vbps-src/functions/: function.v
vbps/src/vbps/func/: .func.v.swp  func.v
vssh/: README.md
vssh/src/: main.v
